# ChangeLog for mail-filter/afew
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  25 Jul 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> afew-9999.ebuild:
  Use my repo until update to latest upstream changes.

  24 Jul 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> afew-9999.ebuild:
  Added dev-python/chardet dependency. Rels #2.

  06 Jul 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> afew-9999.ebuild:
  Added missing setuptools dependency.

  30 Apr 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> ChangeLog:
  move_mode text file no longer exists and because of this dodoc used to fail.

  29 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> afew-9999.ebuild:
  Require 'python' flag enabled for net-mail/notmuch.

*afew-9999 (19 May 2012)

  19 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> +afew-9999.ebuild,
  +metadata.xml:
  Initial ebuild.
