@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD afew-9999.ebuild 927 SHA256 e5834aa517c9d77b183d167bdf8ab34d6ab3a7a3fdcfc7e0bb5a052ac3d92345 SHA512 5bf5fa63e01339a98bcf3c7412ec6a4703d6cfaf39c37b541d6588fc75efc02f398c7acfa5cbccf7fde4a20c3c6f4b38f960c7fbf628c940fd41af1666f1238e WHIRLPOOL d7344902039247cee62714b15647cd9d7842c286a19afb4eca8fbfcc6423ba414c612cb0434f0213cfa136fa38453694d40539a4e3b9a0815aab2e830fff3540
-MISC ChangeLog 903 SHA256 cf18ca9180d6efc15c3692df57f3c46b6904a78c0ee7814ff3dc7488fe44af13 SHA512 f692d215d486170cc49919447f5999fd66296168d047a6753f51060ec592e15fb5d0170047a23729e1be2d39d6f49d08451e0d605f66cc42e2cd400d4a4764e3 WHIRLPOOL a7480ed407428be2c5a86f2f391fb44dd7f34d10b3f1023289ff0c4338299cb553efff1c2d9125353eda89a86f83c3c6efbcd839a2653ae5b6efa182c62252ce
+EBUILD afew-9999.ebuild 968 SHA256 fdbfb0e7f611f33d700d27fcf3c6cb39b1482ae5ac57f614d07ff96be06a6538 SHA512 230f0ef865c90331e6f33aab2258baa753c37a49434ec994ac8e8e207ed9b9a7816b92379f1607897b3276400142f597e119159a2b2bdb09d94496fd6b82bfe6 WHIRLPOOL 1047a08ee61a3d0beb16ea8057c5c5bd103a7f9c30eda6bd0896560135d6072dd472214e6e1a07046a3215d98d815c42ef27673714d82bdb902d34841f1536c4
+MISC ChangeLog 1115 SHA256 8e833d6c51e6a7adac761e6de9e3cb9ab92d1928bd1213a9d91f2efb18d202c5 SHA512 65efc8008a1970b42225c44e982cbab5b138bcc6f24f250dcdc83d734018c15c3a8e509270f7a49eed9dbe790ee6467315db9fac0bbc67c87677d01ea0de1770 WHIRLPOOL cc990244fa22353f83b84ee32021c2afb18e2abd678bf4bb944973490de57a50a13420124f526842f2efc8935fb7aff3380bb2d1fe2721f9f198037d9f272ce8
 MISC metadata.xml 869 SHA256 d1134c2c3e636bb9880156fe1ff76fe2e42d959459bf1cef1070fa8af26b1ca6 SHA512 92ce135551f0f9bdc4d12fe325154abdfb1bbfb6f70162ec609f7d2af864db55c02ec493b460aaff8589a9a32ee0d495472271bda2166d7c3357bd697496aa70 WHIRLPOOL 4fff37470a5c3cd315e944e7eafcbf84c2a29513f12e5b2289d0721bd2711cb6e441f73a102c260e230a80582ec41cadbc59afb82bb8dcc307ed6ed1f9a7f5ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR8WZwAAoJEPATRTHh2/q1tlAH/0lyClfH4/Y7nTmpimptgiOT
-8qQIUrI/VGpcGb0ZfbP3GBSIbUIpzEGy4zcxAmThs5XUbqMShcAEA7zba79fJiS2
-Fd8N0Muv7xQ6h3yFmHMEeweQtubeqTYWnbHn+62rb/RNKQdlMrhmB5rwmlQEaf1p
-iJ4TPeFLuxNvbOaP5Gu+ekpWrRESwbwdLHNGDvKmlJZSiJDTzMAvq39oqHpw88X0
-Al85T1deWEVR3/kSU6mdA6/R1FXhSGH8mWB/KJ8X6T9tjTaO6Db/4naoYureXv60
-W1ePDSAnvTgI/uiYnsp/4vg4l9opiw/8q5K77S4Wp2MfESv2KQcgk0vqjNjelUM=
-=3MaH
+iQEcBAEBCAAGBQJR8q2sAAoJEPATRTHh2/q1wqkH/18XZLYOgux6ynfZirDYX0Wo
+/C6Q37UmGQVhppJHUtESDwuoq5eC0tqNh18Vg65GqRVTMCSGsSrCHXP8S55vi0C6
+m1/IyJbGySuZOBXpbCmZOJrRgDUdiSEbVN/EiRKKLMbLcZ8kQipddUCTPrl+TOCS
+gqgvWSIv1oqx0ENIE5LO8V1Y+5YIvZ0bt5KkE9OMwJ5ViZYwIMhaiz+zqHFNtDyn
+dFtd0vSzUpeAD7EhOGiTv/hJoTymTqdUEDmTBFAPT/IITrbkUaM3Ste9053Pi6rz
+VBYuWeK3CtFZBo2vK9k8jn7rx4lLZ4rIfIAW+WhXMRpxjtXHBiFCu9sSuXWr/rM=
+=sGTS
 -----END PGP SIGNATURE-----
