@@ -2,34 +2,33 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
+EAPI=5
 
-PYTHON_DEPEND="3:3.2"
-SUPPORT_PYTHON_ABIS="1"
-RESTRICT_PYTHON_ABIS="2.* 3.[01]"
+PYTHON_COMPAT=( python{3_2,3_3} )
 
-inherit distutils git-2
+inherit distutils-r1 git-2
 
 DESCRIPTION="Initial tagging script for Notmuch"
 HOMEPAGE="https://github.com/teythoon/afew"
-EGIT_REPO_URI="git://github.com/aidecoe/afew.git"
+EGIT_REPO_URI="git://github.com/teythoon/afew.git"
 
 LICENSE="ISC"
 SLOT="0"
 KEYWORDS=""
 IUSE="doc"
 
-DEPEND="dev-python/setuptools
-	doc? ( dev-python/sphinx )
+DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
+	doc? ( dev-python/sphinx[${PYTHON_USEDEP}] )
 	"
 RDEPEND="app-text/dbacl
+	dev-python/chardet[${PYTHON_USEDEP}]
 	net-mail/notmuch[python]
 	"
 
 src_prepare() {
 	sed -e "/'subprocess32',/d" -i setup.py
 
-	distutils_src_prepare
+	distutils-r1_src_prepare
 
 	local md
 	for md in *.md; do
@@ -38,7 +37,7 @@ src_prepare() {
 }
 
 src_compile() {
-	distutils_src_compile
+	distutils-r1_src_compile
 
 	if use doc; then
 		pushd docs || die
@@ -48,7 +47,7 @@ src_compile() {
 }
 
 src_install() {
-	distutils_src_install
+	distutils-r1_src_install
 
 	dodoc afew/defaults/afew.config
 
