@@ -2,6 +2,10 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Jul 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> afew-9999.ebuild:
+  Bump EAPI to 5. Use original upstream repo, again. Depend on
+  dev-python/chardet and strip subprocess32 dependency.  Fixes issue #2.
+
   25 Jul 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> afew-9999.ebuild:
   Use my repo until update to latest upstream changes.
 
